--- a/index.html
+++ b/index.html
@@ -310,5 +310,7 @@
 <script src="js/search-history.js"></script>
 <!-- 控制台输出CGM的js文件 -->
 <script src="js/cgm.js"></script>
+<!-- 点击后出现烟花效果 -->
+<script src="js/cursor-effects.js"></script>
 </body>
 </html>
