--- a/index.html
+++ b/index.html
@@ -22,55 +22,55 @@
 							<ul class="dropdown-menu">
 								<li class="dropdown-header">网页</li>
 								<li>
-									 <a href="#">前端</a>
+									 <a href="javascript:search('前端')">前端</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">语言</li>
 								<li>
-									 <a href="#">JAVA</a>
+									 <a href="javascript:search('JAVA')">JAVA</a>
 								</li>
 								<li>
-									 <a href="#">Python</a>
+									 <a href="javascript:search('Python')">Python</a>
 								</li>
 								<li>
-									 <a href="#">Go</a>
+									 <a href="javascript:search('Go')">Go</a>
 								</li>
 								<li>
-									 <a href="#">Android</a>
+									 <a href="javascript:search('Android')">Android</a>
 								</li>
 								<li>
-									 <a href="#">WeChat</a>
+									 <a href="javascript:search('WeChat')">WeChat</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">春天</li>
 								<li>
-									 <a href="#">Spring</a>
+									 <a href="javascript:search('Spring')">Spring</a>
 								</li>
 								<li>
-									 <a href="#">SpringBoot</a>
+									 <a href="javascript:search('SpringBoot')">SpringBoot</a>
 								</li>
 								<li>
-									 <a href="#">SpringCloud</a>
+									 <a href="javascript:search('SpringCloud')">SpringCloud</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">部署</li>
 								<li>
-									 <a href="#">Linux</a>
+									 <a href="javascript:search('Linux')">Linux</a>
 								</li>
 								<li>
-									 <a href="#">Docker</a>
+									 <a href="javascript:search('Docker')">Docker</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">容器</li>
 								<li>
-									 <a href="#">Tomcat</a>
+									 <a href="javascript:search('Tomcat')">Tomcat</a>
 								</li>
 								<li>
-									 <a href="#">Nginx</a>
+									 <a href="javascript:search('Nginx')">Nginx</a>
 								</li>
 							</ul>
 						</li>
@@ -79,82 +79,82 @@
 							<ul class="dropdown-menu">
 								<li class="dropdown-header">网站开发</li>
 								<li>
-									 <a href="#">IDEA</a>
+									 <a href="javascript:search('IDEA')">IDEA</a>
 								</li>
 								<li>
-									 <a href="#">Eclipse</a>
+									 <a href="javascript:search('Eclipse')">Eclipse</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">测试</li>
 								<li>
-									 <a href="#">PostMan</a>
+									 <a href="javascript:search('PostMan')">PostMan</a>
 								</li>
 								<li>
-									 <a href="#">Jmeter</a>
+									 <a href="javascript:search('Jmeter')">Jmeter</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">数据库</li>
 								<li>
-									 <a href="#">Navicat</a>
+									 <a href="javascript:search('Navicat')">Navicat</a>
 								</li>
 								<li>
-									 <a href="#">Medis</a>
+									 <a href="javascript:search('Medis')">Medis</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">部署</li>
 								<li>
-									 <a href="#">Xshell</a>
+									 <a href="javascript:search('Xshell')">Xshell</a>
 								</li>
 								<li>
-									 <a href="#">Xftp</a>
+									 <a href="javascript:search('Xftp')">Xftp</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">文档类</li>
 								<li>
-									 <a href="#">MarkdownPad2</a>
+									 <a href="javascript:search('MarkdownPad2')">MarkdownPad2</a>
 								</li>
 								<li>
-									 <a href="#">FastStone Capture</a>
+									 <a href="javascript:search('FastStone Capture')">FastStone Capture</a>
 								</li>
 								<li>
-									 <a href="#">PS</a>
+									 <a href="javascript:search('PS')">PS</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">游戏开发</li>
 								<li>
-									 <a href="#">UE4</a>
+									 <a href="javascript:search('UE4')">UE4</a>
 								</li>
 								<li>
-									 <a href="#">3DMax</a>
+									 <a href="javascript:search('3DMax')">3DMax</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">录制</li>
 								<li>
-									 <a href="#">OBS Studio</a>
+									 <a href="javascript:search('OBS Studio')">OBS Studio</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">软件</li>
 								<li>
-									 <a href="#">谷歌简中浏览器</a>
+									 <a href="javascript:search('谷歌简中浏览器')">谷歌简中浏览器</a>
 								</li>
 								<li>
-									 <a href="#">浏览器书签</a>
+									 <a href="javascript:search('浏览器书签')">浏览器书签</a>
 								</li>
 								<li>
-									 <a href="#">qwq加速器</a>
+									 <a href="javascript:search('qwq加速器')">qwq加速器</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">解压</li>
 								<li>
-									 <a href="#">解压缩软件</a>
+									 <a href="javascript:search('解压缩软件')">解压缩软件</a>
 								</li>
 							</ul>
 						</li>
@@ -162,31 +162,31 @@
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">音乐<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#">自制歌单</a>
+									 <a href="javascript:search('自制歌单')">自制歌单</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">摇滚</a>
+									 <a href="javascript:search('摇滚')">摇滚</a>
 								</li>
 								<li>
-									 <a href="#">安静</a>
+									 <a href="javascript:search('安静')">安静</a>
 								</li>
 								<li>
-									 <a href="#">轻音乐</a>
+									 <a href="javascript:search('轻音乐')">轻音乐</a>
 								</li>
 								<li>
-									 <a href="#">独特</a>
+									 <a href="javascript:search('独特')">独特</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">光泽</a>
+									 <a href="javascript:search('光泽')">光泽</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">其他</a>
+									 <a href="javascript:search('其他')">其他</a>
 								</li>
 							</ul>
 						</li>
@@ -194,34 +194,34 @@
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">电影<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#">喜剧</a>
+									 <a href="javascript:search('喜剧')">喜剧</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">精品喜剧</a>
+									 <a href="javascript:search('精品喜剧')">精品喜剧</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">动作</a>
+									 <a href="javascript:search('动作')">动作</a>
 								</li>
 								<li>
-									 <a href="#">科幻</a>
+									 <a href="javascript:search('科幻')">科幻</a>
 								</li>
 								<li>
-									 <a href="#">特效</a>
+									 <a href="javascript:search('特效')">特效</a>
 								</li>
 								<li>
-									 <a href="#">卡通</a>
+									 <a href="javascript:search('卡通')">卡通</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">恐怖</a>
+									 <a href="javascript:search('恐怖')">恐怖</a>
 								</li>
 								<li>
-									 <a href="#">推理</a>
+									 <a href="javascript:search('推理')">推理</a>
 								</li>
 							</ul>
 						</li>
@@ -230,28 +230,28 @@
 							<ul class="dropdown-menu">
 								<li class="dropdown-header">推塔</li>
 								<li>
-									 <a href="#">LOL</a>
+									 <a href="javascript:search('LOL')">LOL</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">大逃杀</li>
 								<li>
-									 <a href="#">COD16</a>
+									 <a href="javascript:search('COD16')">COD16</a>
 								</li>
 								<li>
-									 <a href="#">PUBG</a>
+									 <a href="javascript:search('PUBG')">PUBG</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">射爆</li>
 								<li>
-									 <a href="#">命运2</a>
+									 <a href="javascript:search('命运2')">命运2</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li class="dropdown-header">休闲</li>
 								<li>
-									 <a href="#">深岩银河</a>
+									 <a href="javascript:search('深岩银河')">深岩银河</a>
 								</li>
 							</ul>
 						</li>
@@ -259,32 +259,40 @@
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">动漫<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#">好玩</a>
+									 <a href="javascript:search('好玩')">好玩</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">一般</a>
+									 <a href="javascript:search('一般')">一般</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">推理</a>
+									 <a href="javascript:search('推理')">推理</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
-							<input type="text" class="form-control" id="search-input"/>
-						</div> <button type="button" class="btn btn-default" onclick="add_search_history()">搜索</button>
+							<input type="text" class="form-control"/>
+						</div> <button type="button" class="btn btn-default" onclick="search()">搜索</button>
 					</form>
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav">
 						<li class="dropdown search-history-dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">历史记录<strong class="caret"></strong></a>
 							<!-- 历史记录显示区域(给ul的classs添加search-history-ul,并导入js/search-history.js文件即可) -->
 							<ul class="dropdown-menu search-history-ul">
 							</ul>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							 <a href="#">登录</a>
+						</li>
+						<li>
+							 <a href="#">注册</a>
 						</li>
 					</ul>
 				</div>
@@ -312,5 +320,7 @@
 <script src="js/cgm.js"></script>
 <!-- 点击后出现烟花效果 -->
 <script src="js/cursor-effects.js"></script>
+<!-- 搜索功能的js文件 -->
+<script src="js/search.js"></script>
 </body>
 </html>
