--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>我的第一个 HTML 页面</title>
 </head>
 <!-- bootstrap.min.css -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- 自动提示搜索关键字的css -->
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.min.css">
 <body>
@@ -300,18 +300,13 @@
 		</div>
 	</div>
 </div>
-<!-- jquery-3.4.1.min.js -->
-<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+<!-- jquery.min.js -->
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <!-- 自动提示搜索关键字的js -->
 <script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-  crossorigin="anonymous"></script>
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <!-- bootstrap.min.js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- 引入其他的js文件 -->
 <script src="js/others.js"></script>
 <!-- 历史记录js文件,自动提示关键字js文件 -->
