--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <title>我的第一个 HTML 页面</title>
 </head>
 <!-- bootstrap.min.css -->
-<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- 自动提示搜索关键字的css -->
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.min.css">
+<link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 <body>
 <div class="container">
 	<div class="row clearfix">
@@ -301,12 +301,11 @@
 	</div>
 </div>
 <!-- jquery.min.js -->
-<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <!-- 自动提示搜索关键字的js -->
-<script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <!-- bootstrap.min.js -->
-<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <!-- 引入其他的js文件 -->
 <script src="js/others.js"></script>
 <!-- 历史记录js文件,自动提示关键字js文件 -->
