--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <head>
 <title>我的第一个 HTML 页面</title>
 </head>
-<!-- bootstrap.min.css 
+<!-- bootstrap.min.css -->
 <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-<!-- 自动提示搜索关键字的css 
-<link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">-->
-<link href="backups/bootstrap-3.4.1/bootstrap-3.4.1.min.css" rel="stylesheet">
-<link href="backups/jquery-ui-1.12.1/jquery-ui-1.12.1.min.css" rel="stylesheet">
+<!-- 自动提示搜索关键字的css -->
+<link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 <body>
 <div class="container">
 	<div class="row clearfix">
@@ -302,15 +300,12 @@
 		</div>
 	</div>
 </div>
-<!-- jquery.min.js 
+<!-- jquery.min.js -->
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-<!-- 自动提示搜索关键字的js 
+<!-- 自动提示搜索关键字的js -->
 <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<!-- bootstrap.min.js 
-<script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
-<script src="backups/jquery-3.4.1/jquery.min-3.4.1.js"></script>
-<script src="backups/jquery-ui-1.12.1/jquery-ui.min-1.12.1.js"></script>
-<script src="backups/bootstrap-3.4.1/bootstrap.min-3.4.1.js"></script>
+<!-- bootstrap.min.js -->
+<script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <!-- 引入其他的js文件 -->
 <script src="js/others.js"></script>
 <!-- 历史记录js文件,自动提示关键字js文件 -->
