--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <title>我的第一个 HTML 页面</title>
 </head>
+<!-- 网页ico -->
+<link rel="icon" href="images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
 <!-- bootstrap.min.css -->
 <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- 自动提示搜索关键字的css -->
@@ -316,5 +319,25 @@
 <script src="js/cursor-effects.js"></script>
 <!-- 搜索功能的js文件 -->
 <script src="js/search.js"></script>
+
+
+
+
+
+
+
+
+
+<!-- 发布到GitHub的cdn加速地址 -->
+<!-- 引入其他的js文件 
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/others.js"></script>
+<!-- 历史记录js文件,自动提示关键字js文件 
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search-history.js"></script>
+<!-- 控制台输出CGM的js文件 
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cgm.js"></script>
+<!-- 点击后出现烟花效果 
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cursor-effects.js"></script>
+<!-- 搜索功能的js文件 
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search.js"></script>-->
 </body>
 </html>
