--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
-			<nav class="navbar navbar-default" role="navigation">
+			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<div class="navbar-header">
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="https://dimlt.github.io">Dimlt</a>
 				</div>
@@ -295,7 +295,7 @@
 							 <a href="#">登录</a>
 						</li>
 						<li>
-							 <a href="#">注册</a>
+							 <a href="javascript:navbar_inverse()">黑/白</a>
 						</li>
 					</ul>
 				</div>
