--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="zh-CN">
 <head>
+<meta charset="UTF-8">
 <title>我的第一个 HTML 页面</title>
 </head>
 <!-- 网页ico -->
@@ -322,9 +323,10 @@
 <script src="js/cursor-effects.js"></script>
 <!-- 搜索功能的js文件 -->
 <script src="js/search.js"></script>
-<!-- 网页小猫 -->
-<script src="live2dw/lib/L2Dwidget.min.js?094cbace49a39548bed64abff5988b05"></script>
+<!-- 网页小猫,问号后面加的是可以触发鼠标点击特效的代码 -->
+<script src="live2dw/lib/L2Dwidget.min.js"></script>
 <script>
+<!-- 初始化网页小猫 -->
 L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"live2dw/assets/hijiki.model.json"},"display":{"position":"left","width":150,"height":300},"mobile":{"show":false}});
 </script>
 
