--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
 <script src="js/cursor-effects.js"></script>
 <!-- 搜索功能的js文件 -->
 <script src="js/search.js"></script>
-<!-- 网页小猫,问号后面加的是可以触发鼠标点击特效的代码 -->
+<!-- 网页小猫 -->
 <script src="live2dw/lib/L2Dwidget.min.js"></script>
 <script>
 <!-- 初始化网页小猫 -->
-L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"live2dw/assets/hijiki.model.json"},"display":{"position":"left","width":150,"height":300},"mobile":{"show":false}});
+L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"live2dw/assets/hijiki.model.json"},"display":{"position":"left","width":150,"height":300},"mobile":{"show":true}});
 </script>
 
 
