--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>我的第一个 HTML 页面</title>
 </head>
 <!-- 网页ico -->
-<link rel="icon" href="images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
 <!-- bootstrap.min.css -->
 <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- 自动提示搜索关键字的css -->
@@ -324,16 +324,16 @@
 <!-- 搜索功能的js文件 -->
 <script src="js/search.js"></script>
 <!-- 网页小猫 -->
-<script src="live2dw/lib/L2Dwidget.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/live2dw/lib/L2Dwidget.min.js"></script>
 <script>
-<!-- 初始化网页小猫 -->
-L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"live2dw/assets/hijiki.model.json"},"display":{"position":"left","width":150,"height":300},"mobile":{"show":true}});
+<!-- 初始化网页小猫(init方法,然后把live2dw文件夹考过去就行了,就这两步) -->
+L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/live2dw/assets/hijiki.model.json"},"display":{"position":"left","width":150,"height":300},"mobile":{"show":true}});
 </script>
 
 
 
 
-<!-- 发布到GitHub的cdn加速地址 -->
+<!-- 发布到GitHub的cdn加速地址
 <!-- 引入其他的js文件 
 <script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/others.js"></script>
 <!-- 历史记录js文件,自动提示关键字js文件 
@@ -343,6 +343,7 @@ L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPa
 <!-- 点击后出现烟花效果 
 <script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cursor-effects.js"></script>
 <!-- 搜索功能的js文件 
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search.js"></script>-->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/js/search.js"></script>
+-->
 </body>
 </html>
