--- a/index.html
+++ b/index.html
@@ -313,37 +313,39 @@
 <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <!-- bootstrap.min.js -->
 <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<!-- 引入其他的js文件 -->
+<!-- 本地版本 -->
+<!-- 引入其他的js文件 
 <script src="js/others.js"></script>
-<!-- 历史记录js文件,自动提示关键字js文件 -->
+<!-- 历史记录js文件,自动提示关键字js文件 
 <script src="js/search-history.js"></script>
-<!-- 控制台输出CGM的js文件 -->
+<!-- 控制台输出CGM的js文件 
 <script src="js/cgm.js"></script>
-<!-- 点击后出现烟花效果 -->
+<!-- 点击后出现烟花效果 
 <script src="js/cursor-effects.js"></script>
+<!-- 搜索功能的js文件 
+<script src="js/search.js"></script>-->
+
+
+
+<!-- 发布到GitHub的cdn加速地址 -->
+<!-- 引入其他的js文件 -->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/others.min.js"></script>
+<!-- 历史记录js文件,自动提示关键字js文件 -->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search-history.min.js"></script>
+<!-- 控制台输出CGM的js文件 -->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cgm.min.js"></script>
+<!-- 点击后出现烟花效果 -->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cursor-effects.min.js"></script>
 <!-- 搜索功能的js文件 -->
-<script src="js/search.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search.min.js"></script>
+-->
+
 <!-- 网页小猫 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/live2dw/lib/L2Dwidget.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/live2dw/lib/L2Dwidget.min.js"></script>
 <script>
 <!-- 初始化网页小猫(init方法,然后把live2dw文件夹考过去就行了,就这两步) -->
 L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/live2dw/assets/hijiki.model.json"},"display":{"position":"left","width":150,"height":300},"mobile":{"show":true}});
 </script>
 
-
-
-
-<!-- 发布到GitHub的cdn加速地址
-<!-- 引入其他的js文件 
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/others.js"></script>
-<!-- 历史记录js文件,自动提示关键字js文件 
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search-history.js"></script>
-<!-- 控制台输出CGM的js文件 
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cgm.js"></script>
-<!-- 点击后出现烟花效果 
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cursor-effects.js"></script>
-<!-- 搜索功能的js文件 
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.02/js/search.js"></script>
--->
 </body>
 </html>
