--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
 <!-- APlyaer -->
 <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
 
-<!-- 本地版本,发布到github时需要注释掉 -->
+<!-- 本地版本,发布到github时需要注释掉 
 <script src="js/others.js"></script>
 <script src="js/search-history.js"></script>
-<script src="js/search.js"></script>
+<script src="js/search.js"></script>-->
 <script src="js/aplayer.js"></script>
 
 
