--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							 <a href="#">登录</a>
 						</li>
 						<li>
-							 <a href="javascript:navbar_inverse()">黑/白</a>
+							 <a href="javascript:navbar_inverse()">黑/白&nbsp;&nbsp;</a>
 						</li>
 					</ul>
 				</div>
@@ -316,6 +316,8 @@
 <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <!-- bootstrap.min.js -->
 <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
 <!-- 发布到GitHub的cdn加速地址 -->
 <!-- 引入其他的js文件 -->
 <script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/others.min.js"></script>
@@ -327,14 +329,16 @@
 <script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/cursor-effects.min.js"></script>
 <!-- 搜索功能的js文件 -->
 <script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/search.min.js"></script>
-<!-- APlyaer -->
+<!-- APlyaer基础js文件 -->
 <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+<!-- APlyaer配置的js文件 -->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io/js/aplayer.min.js"></script>
 
 <!-- 本地版本,发布到github时需要注释掉 
 <script src="js/others.js"></script>
 <script src="js/search-history.js"></script>
-<script src="js/search.js"></script>-->
-<script src="js/aplayer.js"></script>
+<script src="js/search.js"></script>
+<script src="js/aplayer.js"></script>-->
 
 
 
