--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <title>我的第一个 HTML 页面</title>
 </head>
 <!-- 网页ico -->
-<link rel="icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
 <!-- bootstrap.min.css -->
 <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- 自动提示搜索关键字的css -->
 <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 <!-- APlayer -->
-<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/backups/APlayer/APlayer.min.css" rel="stylesheet">
-<body>
+<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/backups/APlayer/APlayer.min.css" rel="stylesheet">
+<body style="font-family:'Ubuntu','Roboto','Open Sans','Microsoft YaHei','sans-serif'">
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
@@ -306,10 +306,33 @@
 					</ul>
 				</div>
 			</nav>
+			<!-- Aplayer-div -->
 			<div id="aplayer"></div>
+
 		</div>
 	</div>
 </div>
+
+
+<hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+<hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr><hr>
+<footer class="jumbotron text-center" style="margin-bottom:0;background:linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);font-weight:bold;font-size:1rem;color:#4a4a4a;">
+	<hr>
+    <div class="container">
+        <div class="row">
+			<!-- 不蒜子,极简网页计数器 -->
+			<span>来访 <span id="busuanzi_value_site_uv"></span>人</span>
+			<span>, 总访问 <span id="busuanzi_value_site_pv"></span>次</span>
+			</br>
+			<!-- 网站运行时间统计 -->
+			<span id="timeDate"></span><span id="times"></span>
+		</div>
+    </div>
+	<hr>
+</footer>
+
+
+<!-- 基础的js文件 -->
 <!-- jquery.min.js -->
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <!-- 自动提示搜索关键字的js -->
@@ -320,19 +343,24 @@
 
 <!-- 发布到GitHub的cdn加速地址 -->
 <!-- 引入其他的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/js/others.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/others.min.js"></script>
 <!-- 历史记录js文件,自动提示关键字js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/js/search-history.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/search-history.min.js"></script>
 <!-- 控制台输出CGM的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/js/cgm.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/cgm.min.js"></script>
 <!-- 点击后出现烟花效果 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/js/cursor-effects.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/cursor-effects.min.js"></script>
 <!-- 搜索功能的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/js/search.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/search.min.js"></script>
 <!-- APlyaer基础js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/backups/APlayer/APlayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/backups/APlayer/APlayer.min.js"></script>
 <!-- APlyaer配置的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/js/aplayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/aplayer.min.js"></script>
+<!-- 不蒜子,极简网页计数器(统计访客数量) -->
+<script async src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/backups/busuanzi/busuanzi.pure.mini.js"></script>
+<!-- 网站运行时间统计 -->
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/js/web-create-time.js"></script>
+
 
 <!-- 本地版本,发布到github时需要注释掉 
 <script src="js/others.js"></script>
@@ -343,14 +371,11 @@
 
 
 
-
-
-
 <!-- 网页小猫 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/live2dw/lib/L2Dwidget.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/live2dw/lib/L2Dwidget.min.js"></script>
 <script>
 <!-- 初始化网页小猫(init方法,然后把live2dw文件夹拷过去就行了,就这两步) -->
-L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.8/live2dw/assets/hijiki.model.json"},"display":{"position":"right","width":150,"height":300},"mobile":{"show":true}});
+L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.0.9/live2dw/assets/hijiki.model.json"},"display":{"position":"right","width":150,"height":300},"mobile":{"show":true}});
 </script>
 
 </body>
