--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <title>我的第一个 HTML 页面</title>
 </head>
 <!-- 网页ico -->
-<link rel="icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
-<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/images/icos/Crayon Shin-chan.ico" type="image/x-icon" />
 
 <!-- bootstrap.min.css -->
 <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- 自动提示搜索关键字的css -->
 <link href="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 <!-- APlayer.css -->
-<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/backups/APlayer/APlayer.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/backups/APlayer/APlayer.min.css" rel="stylesheet">
 
 <!-- 使用CSDN的MD编辑器用到的css文件,直接点查看,然后复制页面上的element,即可 -->
-<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/css/markdown_views-b6c3c6d139.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/css/detail-075a8c7524.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/css/markdown_views-b6c3c6d139.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/css/detail-075a8c7524.min.css" rel="stylesheet">
 
 
 <body style="font-family:'Ubuntu','Roboto','Open Sans','Microsoft YaHei','sans-serif'">
@@ -25,7 +25,7 @@
 		<div class="col-md-12 column">
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="https://dimlt.github.io">Dimlt</a>
+					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="https://github.com/Dimlt/Dimlt.github.io/tree/master">Dimlt</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -358,40 +358,39 @@
 
 <!-- 发布到GitHub的cdn加速地址 -->
 <!-- 引入其他的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/others.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/others.min.js"></script>
 <!-- 历史记录js文件,自动提示关键字js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/search-history.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/search-history.min.js"></script>
 <!-- 控制台输出CGM的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/cgm.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/cgm.min.js"></script>
 <!-- 点击后出现烟花效果 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/cursor-effects.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/cursor-effects.min.js"></script>
 <!-- 搜索功能的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/search.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/search.min.js"></script>
 <!-- APlyaer基础js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/backups/APlayer/APlayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/backups/APlayer/APlayer.min.js"></script>
 <!-- APlyaer配置的js文件 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/aplayer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/aplayer.min.js"></script>
 <!-- 不蒜子,极简网页计数器(统计访客数量) -->
-<script async src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/backups/busuanzi/busuanzi.pure.mini.js"></script>
+<script async src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/backups/busuanzi/busuanzi.pure.mini.js"></script>
 <!-- 网站运行时间统计 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/js/web-create-time.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/js/web-create-time.min.js"></script>
 
 
 <!-- 本地版本,发布到github时需要注释掉 
 <script src="js/others.js"></script>
 <script src="js/search-history.js"></script>
-<script src="js/aplayer.js"></script>
-<script src="js/search.js"></script>-->
-
+<script src="js/search.js"></script>
+<script src="js/aplayer.js"></script>-->
 
 
 
 
 <!-- 网页小猫 -->
-<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/live2dw/lib/L2Dwidget.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/live2dw/lib/L2Dwidget.min.js"></script>
 <script>
 <!-- 初始化网页小猫(init方法,然后把live2dw文件夹拷过去就行了,就这两步) -->
-L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.1.9/live2dw/assets/hijiki.model.json"},"display":{"position":"right","width":150,"height":300},"mobile":{"show":true}});
+L2Dwidget.init({"pluginRootPath":"live2dw/","pluginJsPath":"lib/","pluginModelPath":"assets/","tagMode":false,"log":false,"model":{"jsonPath":"https://cdn.jsdelivr.net/gh/dimlt/dimlt.github.io@0.2.0/live2dw/assets/hijiki.model.json"},"display":{"position":"right","width":150,"height":300},"mobile":{"show":true}});
 </script>
 
 </body>
